--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.16.1",
+    "@mantine/hooks": "^7.16.1",
     "@mapbox/search-js-react": "^1.0.0-beta.25",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.48.0",
+    "@tabler/icons-react": "^3.29.0",
     "mapbox-gl": "^3.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
