--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
+    "uuid": "^11.0.5",
     "vite": "^6.0.5"
   }
 }
