--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.48.0",
     "@tabler/icons-react": "^3.29.0",
+    "@types/uuid": "^10.0.0",
     "mapbox-gl": "^3.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
