--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.2.0",
     "@mantine/core": "^7.16.1",
     "@mantine/hooks": "^7.16.1",
     "@mapbox/search-js-react": "^1.0.0-beta.25",
