--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^2.2.0",
     "@mantine/core": "^7.16.1",
     "@mantine/hooks": "^7.16.1",
+    "@mantine/notifications": "^7.17.1",
     "@mapbox/search-js-react": "^1.0.0-beta.25",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
